乐优商城的第二次提交，作者：朱涛

--- a/ly-item/ly-item-service/src/main/resources/application.yml
+++ b/ly-item/ly-item-service/src/main/resources/application.yml
@@ -17,7 +17,10 @@ eureka:
     ip-address: 127.0.0.1
     lease-renewal-interval-in-seconds: 5 #心跳时间
 mybatis:
-  type-aliases-package: com.leyou.item.mapper
+  type-aliases-package: com.leyou.item.entity
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: /*.xml
+logging:
+  level:
+    com.leyou: debug
