--- a/ly-item/ly-item-pojo/pom.xml
+++ b/ly-item/ly-item-pojo/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ly-item-pojo</artifactId>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
